--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html ng-app="carsApp">
+<html lang="ru" ng-app="carsApp">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body >
-<div ng-controller="carsAppControllers"></div>
+<div ng-view></div>
+test
 
-
-<script src="js/lib/angular.min.js"></script>
+<script src="js/lib/bower_components/angular/angular.js"></script>
 <script src="js/lib/angular-route.min.js"></script>
 <script src="js/lib/resource.js"></script>
 <script src="js/app.js"></script>
