--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ test
 <script src="js/app.js"></script>
 <script src="js/controller/carsCtrl.js"></script>
 <script src="js/services/services.js"></script>
+<script src="js/directive/correctInput.js"></script>
 
 
 </body>
