--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div ng-view></div>
 test
 
-<script src="js/lib/bower_components/angular/angular.js"></script>
+<script src="js/lib/angular.min.js"></script>
 <script src="js/lib/angular-route.min.js"></script>
 <script src="js/lib/resource.js"></script>
 <script src="js/app.js"></script>
